# portfolio

./: .dockerignore  .gitignore  Makefile  alembic.ini  config.yml  docker-compose.yml  dockerfile  entrypoint.sh  pyproject.toml  ruff.toml
alembic/: env.py
alembic/versions/: 055bb413e8ce_add_group_table.py  1221b6e4dda5_add_user_table.py  23a0934b516e_seed_data.py  3a6a7fb6aaf6_add_portfolio_schema.py  3be74c05c2e0_add_profile_picture_path_column_to_the_.py  5e308f9c6e75_add_portfolio_image_table.py  800822ad54e2_update_image_path_column_names.py  ad221fafd493_update_image_table_to_contain_nullable_.py  d2052311801f_add_socials_columns_to_user_table.py
sql/: export.sql
src/portfolio/: __init__.py  __main__.py  app.py  auth.py  decorators.py  error.py  routes.py  wsgi.py
src/portfolio/models/: __init__.py  image.py  user.py
src/portfolio/views/: __init__.py  group.py  image.py  spec.py  user.py
tests/: conftest.py  test_auth.py
tests/factories/: __init__.py  image.py  user.py
tests/views/: test_group.py  test_image.py  test_user.py
ui/portfolio/: Dockerfile  Makefile  package-lock.json  package.json  tailwind.config.js
ui/portfolio/src/: App.vue  api.ts  https.ts  main.ts  shims-vue.d.ts  types.ts
ui/portfolio/src/components/: About.vue  AboutBio.vue  AboutItem.vue  Gallery.vue  GalleryImage.vue  GalleryImageDisplay.vue  GalleryImageHeader.vue  GalleryImageHeaderProfile.vue  GalleryImageStats.vue  GalleryImageStatsItem.vue  GalleryItem.vue  Image.vue  ImageHeader.vue  SidePanel.vue  SidePanelLinkList.vue  SidePanelLinkListAbout.vue  SidePanelLinkListItem.vue  SidePanelLogo.vue  SidePanelSocials.vue  SidePanelSocialsItem.vue
ui/portfolio/src/router/: index.ts
ui/portfolio/src/views/: AboutView.vue  GalleryImageView.vue  GalleryView.vue
