[tool.poetry]
name = "portfolio"
version = "0.0.1"
description = "A pytest plugin for easily instantiating reproducible mock resources."
authors = ["Prateek Pisat <pisatprateek12@gmail.com>",]
repository = "https://github.com/"
packages = [
    { include = "portfolio", from = "src" },
]
readme = 'README.md'
include = ["*.md"]

[tool.poetry.dependencies]
python = ">=3.10, <3.11"
pydantic = "^1.8.2"
pendulum = "^2.1.2"
Flask = "^2.0.2"
configly = "^0.2.2"
black = ">=22.3.0"
flask-pydantic-spec = "^0.4.1"
gunicorn = "^20.1.0"
psycopg2-binary = "2.9.3"
alembic = "^1.8.1"
PyJWT = "^2.6.0"
Faker = "^15.3.4"
SQLAlchemy = {version = "^1.4.45", extras = ["mypy"]}

[tool.poetry.dev-dependencies]
black = {version = "=>19.3b0", allow-prereleases = true}
flake8 = "*"
isort = ">=5.0"
pydocstyle = {version = "*", python = ">=3.5"}
pytest-mock-resources = {version = "^2.6.3", extras = ["postgres"]}
types-Flask = "^1.1.6"
types-Werkzeug = "^1.0.9"
types-requests = "^2.28.11"
setuptools = "^65.6.3"


[tool.isort]
profile = 'black'
known_first_party = 'portfolio,tests'
line_length = 100
float_to_top=true
order_by_type = false
use_parentheses = true

[tool.black]
line_length = 100

[tool.mypy]
strict_optional = true
ignore_missing_imports = true
warn_unused_ignores = true
implicit_reexport = true
incremental = true
plugins = ['sqlalchemy.ext.mypy.plugin']

[build-system]
requires = ["poetry_core==1.0.4"]
build-backend = "poetry.core.masonry.api"
