[tool.poetry]
name = "portfolio"
version = "0.0.1"
description = ""
authors = ["Prateek Pisat <pisatprateek12@gmail.com>",]
repository = "https://github.com/"
packages = [
    { include = "portfolio", from = "src" },
]
readme = 'README.md'
include = ["*.md"]

[tool.poetry.dependencies]
python = ">=3.12, <4"
pydantic = "^1.8.2"
Flask = "^2.0.2"
flask-pydantic-spec = "^0.4.1"
gunicorn = "^20.1.0"
alembic = "^1.8.1"
PyJWT = "^2.6.0"
SQLAlchemy = {version = "^1.4.45"}
boto3 = "^1.26.38"
Pillow = "^10.3.0"
boto3-type-annotations = "^0.3.1"
blurhash-python = "^1.1.3"
configly = {version = "^1.0.0", extras = ["yaml"]}
setuplog = "^0.3.1"
psycopg2-binary = "^2.9.5"
pendulum = "^3.0.0"

[tool.poetry.dev-dependencies]
black = {version = ">19.3b0", allow-prereleases = true}
moto = "^4.0.12"
pytest-mock-resources = {version = "*", extras = ["postgres-binary"]}
Faker = "^16.1.0"
freezegun = "^1.2.2"
sqlalchemy-repr = "^0.1.0"
ruff = "^0.4.1"

[build-system]
requires = ["poetry_core==1.0.4"]
build-backend = "poetry.core.masonry.api"
